plugins {
    id 'java'
    id 'maven-publish'
    id 'java-library'
}

group = 'com.gin.nga'
version = '1.0.0'
javadoc.options.encoding = "UTF-8"

java {
    withJavadocJar()
    withSourcesJar()
}


// 关闭子项目的 javadoc 任务, 防止报错
tasks.javadoc {
    enabled = false
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
}

// 发布配置
publishing {
    publications {
        myPublish(MavenPublication) {
//                from components.java
//                artifact bootJar
            from components.java

            versionMapping {
                usage('java-api') {
                    fromResolutionOf('runtimeClasspath')
                }
                usage('java-runtime') {
                    fromResolutionResult()
                }
            }
        }
    }
    sourceCompatibility JavaVersion.VERSION_1_8
    targetCompatibility JavaVersion.VERSION_1_8

    // 发布到的仓库
    repositories {
        mavenLocal()
        maven {
            name 'project'
            def rUrl = rootProject.layout.projectDirectory.dir("repo/releases")
            def sUrl = rootProject.layout.projectDirectory.dir("repo/snapshots")
            url version.endsWith("SNAPSHOT") ? sUrl : rUrl
        }
    }
}

repositories {
    maven { url 'https://agmonk.github.io/gin-framework/repo/releases/' }
}

dependencies {
    // 工具类
    api "com.gin.framework:common:1.0.0"
    // 工具类
    api 'org.apache.commons:commons-text:1.10.0'

    // http客户端
    api "com.squareup.okhttp3:okhttp:4.10.0"
    // 解析网页document
    api "org.jsoup:jsoup:1.15.4"
    compileOnly 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'
}
